{
  "version": 4,
  "terraform_version": "0.13.4",
  "serial": 58,
  "lineage": "117ef65c-b781-0341-2058-8c7035bc113d",
  "resources": [
    {
      "module": "module.aws_entorno",
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c43b23f011ba5061",
            "arn": "arn:aws:ec2:us-east-1:551915360552:instance/i-0ffb9a4ee000ef79b",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ffb9a4ee000ef79b",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "key_desarrollo",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-051450ff9fd964f4c",
            "private_dns": "ip-10-60-1-30.ec2.internal",
            "private_ip": "10.60.1.30",
            "public_ip": "54.82.45.71",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-08689ffcbe3dce9ee",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b94d36e4017d8aa2",
            "tags": {
              "Name": "instanciaDes"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-09c536f0c7b64ad43"
            ]
          },
          "dependencies": [
            "module.aws_entorno.aws_internet_gateway.gw",
            "module.aws_entorno.aws_security_group.allow_ssh",
            "module.aws_entorno.aws_subnet.subred1",
            "module.aws_entorno.aws_vpc.mivpc",
            "module.aws_entorno.data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "module": "module.aws_entorno",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:551915360552:internet-gateway/igw-02ec36195904fee6b",
            "id": "igw-02ec36195904fee6b",
            "owner_id": "551915360552",
            "tags": {
              "Name": "main"
            },
            "vpc_id": "vpc-04004864af0a15114"
          },
          "dependencies": [
            "module.aws_entorno.aws_vpc.mivpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_entorno",
      "mode": "managed",
      "type": "aws_main_route_table_association",
      "name": "rtasociacion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08b2c538ed25cd45b",
            "original_route_table_id": "rtb-0551512a0d1fc0f21",
            "route_table_id": "rtb-04b3a0d38a4bbb171",
            "vpc_id": "vpc-04004864af0a15114"
          },
          "dependencies": [
            "module.aws_entorno.aws_internet_gateway.gw",
            "module.aws_entorno.aws_route_table.miTablaRoute",
            "module.aws_entorno.aws_vpc.mivpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_entorno",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "miTablaRoute",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-04b3a0d38a4bbb171",
            "owner_id": "551915360552",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02ec36195904fee6b",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "vpc_id": "vpc-04004864af0a15114"
          },
          "dependencies": [
            "module.aws_entorno.aws_internet_gateway.gw",
            "module.aws_entorno.aws_vpc.mivpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_entorno",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:551915360552:security-group/sg-09c536f0c7b64ad43",
            "description": "SG sgDesarrollo",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09c536f0c7b64ad43",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "sgDesarrollo",
            "name_prefix": "",
            "owner_id": "551915360552",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-04004864af0a15114"
          },
          "dependencies": [
            "module.aws_entorno.aws_vpc.mivpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_entorno",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subred1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:551915360552:subnet/subnet-0b94d36e4017d8aa2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.60.1.0/24",
            "id": "subnet-0b94d36e4017d8aa2",
            "map_public_ip_on_launch": true,
            "owner_id": "551915360552",
            "tags": {
              "Name": "misubnet"
            },
            "vpc_id": "vpc-04004864af0a15114"
          },
          "dependencies": [
            "module.aws_entorno.aws_vpc.mivpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_entorno",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "mivpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:551915360552:vpc/vpc-04004864af0a15114",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.60.0.0/16",
            "default_network_acl_id": "acl-0e03780bf3e816872",
            "default_route_table_id": "rtb-0551512a0d1fc0f21",
            "default_security_group_id": "sg-0e49205be745e21b2",
            "dhcp_options_id": "dopt-0a150d68",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-04004864af0a15114",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0551512a0d1fc0f21",
            "owner_id": "551915360552",
            "tags": {
              "Name": "mivpc"
            }
          }
        }
      ]
    }
  ]
}